# nxn

./: .gitattributes  .gitignore  Makefile  build.zig  build.zig.zon  readme.md
ncn/: .clang-format  CMakeLists.txt
ncn/src/: error.c  error.h  file.c  file.h  lexer.c  lexer.h  macro.h  main.c  memory.c  memory.h  span.h  string.c  string.h  token.c  token.h
ncn/test/pass/001-basic/001-return/: 001.nxn
nvn/: Makefile  dune-project
nvn/lib/: dune  main.v
nxn/: .ocamlformat  Cargo.toml  Makefile  bye.go  dune-project  go.mod  main.go  util.go  x.n  x.nxn
nxn/ast/: ast.go
nxn/core/: error.go  file.go  ignore.go  must.go  prime.go  span.go
nxn/lexer/: lexer.go  token.go  util.go
nxn/lib/: ast.ml  dune  env.ml  error.ml  file.ml  getAst.ml  getEnv.ml  id.ml  main.ml  mir.ml  nxnAst.ml  nxnLexer.mll  nxnParser.mly  setAst.ml  util.ml  utils.ml
nxn/parser/: parser.go
nxn/src/: lib.rs  main.rs  x.n
nxn/src/lexer/: lex.rs  token.rs
nxn/test/: 001-02.ll  Makefile
nxn/test/fail/: 001-001-001.nxn  001-001-002.nxn  001-001-101.nxn  001-002-001.nxn  001-02.nxn  001-03.nxn  001-04.nxn  001-05.nxn  002-01.nxn
nxn/test/llvm/: 001-01.ll  001-03.ll  test.sh
nxn/test/norm/001-basic/002-variable/pass/: 001.nxn  002.nxn  003.nxn
nxn/test/norm/001-basic/003-function/pass/: 001.nxn  002.nxn  003.nxn
nxn/test/norm/001-basic/004-condition/pass/: 001.nxn  002.nxn  003.nxn  004.nxn  005.nxn  020.nxn
nxn/test/norm/001-basic/005-block/pass/: 001.nxn  002.nxn
nxn/test/norm/001-basic/020-borrow/fail/: 001.nxn
nxn/test/norm/001-basic/020-borrow/pass/: 001.nxn  002.nxn  003.nxn  004.nxn
nxn/test/pass/: 001-001-001.nxn  001-001-003.nxn  001-001-004.nxn  001-001-301.nxn  001-001-302.nxn  001-001-303.nxn  001-01-02.nxn  001-02.nxn  001-03.nxn  001-04.nxn  001-05.nxn  002-01.nxn  002-02.nxn  002-03.nxn  002-04.nxn
nxn/test/qbe/: 001-001-001.ss  001-001-002.ss  Makefile  test.sh
src/: main.zig  mod.zig  root.zig  x.nxn
src/ast/: ast.zig
src/core/: arrayList.zig  externAllocator.zig  ignore.zig  indexHandle.zig  indexSlice.zig  indexSpan.zig  string.zig
src/lexer/: lexer.zig  token.zig
src/parser/: parser.zig
test/grammar/reference/: Makefile  lexer.l  parser.y
