(lang dune 3.17)
(using coq 0.10)

(name nvn)

(source
 (github oxcrow/nxn))

(authors "oxcrow<oxcrow@proton.me>")

(license RESTRICTED)

(package
 (name nvn)
 (synopsis "nvn compiler.")
 (description "A formally verified compiler for the nxn programming language.")
 (depends coq-core)
 (tags ("compiler")))

