(lang dune 3.17)

(name nxn)

(source
 (github oxcrow/nxn))

(authors "oxcrow<oxcrow@proton.me>")

(license RESTRICTED)

(using menhir 3.0)

(package
 (name nxn)
 (synopsis "nxn compiler.")
 (description "A compiler for the nxn programming language.")
 (depends ocaml)
 (tags ("compiler")))

; dune: https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
