(ocamllex
 (modules nxnLexer))

(menhir
 (modules nxnParser))

; Silence annoying warnings.
; + Use -26-27 to silence unused variable warnings
; + Use -33 to silenece unused opened module warnings
; + Use -A to silence all warnings

(env
 (dev
  (flags
   (:standard -w -26-27 -w -33))))

(library
 (name nxn)
 (libraries yojson)
 (preprocess
  (pps
   ppx_deriving.show
   ppx_deriving.map
   ppx_deriving.fold
   ppx_deriving.iter
   visitors.ppx)))
